JBTM-1123 updated to structure as per maven, note that the tests are skipped as JBOSS is not set correctly